<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.home.HomeFragment"
  android:layout_marginBottom="24dp">

  <View
    android:id="@+id/bg_purple"
    android:layout_width="wrap_content"
    android:layout_height="240dp"
    android:background="@drawable/bg_purple"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tittle_app_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/nunito"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/card_summary"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:elevation="4dp"
    android:background="@drawable/card_summary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tittle_app_name" />

  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="24dp"
    android:fontFamily="@font/nunito"
    android:text="@string/saldo"
    android:textColor="#515085"
    android:textSize="18sp"
    android:elevation="4dp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/card_summary"
    app:layout_constraintTop_toTopOf="@+id/card_summary" />

  <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:fontFamily="@font/nunito"
    android:elevation="4dp"
    android:text="Rp. 5.060.000"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/card_summary"
    app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="24dp"
    android:elevation="4dp"
    android:fontFamily="@font/nunito"
    android:text="@string/pemasukan"
    android:textColor="#72D883"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="@+id/card_summary"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:elevation="4dp"
    android:fontFamily="@font/nunito"
    android:text="Rp. 240.000"
    android:textColor="#D9503F"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@+id/textView8"
    app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:fontFamily="@font/nunito"
    android:text="@string/pengeluaran"
    android:textColor="#D9503F"
    android:elevation="4dp"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/card_summary"
    app:layout_constraintStart_toEndOf="@+id/textView7"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:elevation="4dp"
    android:fontFamily="@font/nunito"
    android:text="Rp. 5.300.000"
    android:textColor="#72D883"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/card_summary"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />


  <TextView
      android:id="@+id/riwayat_transaksi"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="23dp"
      android:fontFamily="@font/nunito"
      android:text="@string/riwayat_transaksi"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/card_summary" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:elevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/riwayat_transaksi" />

</androidx.constraintlayout.widget.ConstraintLayout>